Simplify vercel.json to use root directory configuration

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,3 @@
 {
-  "buildCommand": "cd baseconhecimento-web && npm run build",
-  "installCommand": "cd baseconhecimento-web && npm install",
-  "outputDirectory": "baseconhecimento-web/.next",
-  "env": {}
+  "root": "baseconhecimento-web"
 }
