Fix vercel.json with correct build and install commands

--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,5 @@
 {
-  "root": "baseconhecimento-web"
+  "buildCommand": "cd baseconhecimento-web && npm run build",
+  "installCommand": "cd baseconhecimento-web && npm install",
+  "outputDirectory": "baseconhecimento-web/.next"
 }
