--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
-  "buildCommand": "cd baseconhecimento-web && npm run build",
-  "installCommand": "cd baseconhecimento-web && npm install",
-  "outputDirectory": "baseconhecimento-web/.next"
+  "root": "baseconhecimento-web",
+  "buildCommand": "npm run build",
+  "installCommand": "npm install",
+  "outputDirectory": ".next"
 }
